# WingCodeEdit

./: .gitmodules  CMakeLists.txt  README.md  squiggleinformationmodel.cpp  squiggleinformationmodel.h  wingcodeedit.cpp  wingcodeedit.h  wingcodepopup.cpp  wingcodepopup.h  wingcompleter.cpp  wingcompleter.h  winglinemargin.cpp  winglinemargin.h  wingsignaturetooltip.cpp  wingsignaturetooltip.h  wingsquiggleinfomodel.cpp  wingsquiggleinfomodel.h  wingsymbolcenter.cpp  wingsymbolcenter.h  wingsyntaxhighlighter.cpp  wingsyntaxhighlighter.h  wingtextblockuserdata.h
WingCodeEditExample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
